tests/invalid/no_label.s
_start:
  nop
  call func
  nop
